fix(backend): 聊天模块若干问题
