# backend/app/server.ts
@@ -36,8 +36,7 @@ import { doc } from "./doc.js"
 import { z } from "zod"
 import { newLocalMutex } from "./io/adapter/mutex.js"
 import { newNginxFileStorage } from "./io/adapter/file_storage.js"
-import { MemIncGenerator } from "./io/adapter/IncGenerator.js"
-import { createSessionInput, createSessionOutput, getSessionsInput, getSessionsOutput } from "./domain/dto/chat.js"
+import { createSessionInput, createSessionOutput, getMessagesInput, getMessagesOutput, getSessionsInput, getSessionsOutput, sendMessageInput } from "./domain/dto/chat.js"
 
 export interface ServerPort {
     Run(): void
@@ -76,9 +75,8 @@ export class Server implements ServerPort {
 
         const mutex = newLocalMutex()
         const fileStorage = newNginxFileStorage()
-        const incGenerator = new MemIncGenerator()
 
-        const chatService = new ChatService(incGenerator)
+        const chatService = new ChatService()
         const userService = new UserService(mutex, fileStorage)
         const workService = new WorkService(fileStorage)
 
@@ -114,8 +112,10 @@ export class Server implements ServerPort {
         // routerProxy.post('/like/work/:workId/comment/:commentId', likeWorkCommentInput, null, workService.likeWorkComment.bind(workService)) // 点赞评论
 
         /** 聊天模块 */
-        routerProxy.post('/create/chat/session', createSessionInput, createSessionOutput, chatService.createSession.bind(chatService)) // 创建会话
-        routerProxy.get('/chat/sessions', getSessionsInput, getSessionsOutput, chatService.getSessions.bind(chatService)) // 查询会话
+        routerProxy.post('/chat/create/session', createSessionInput, createSessionOutput, chatService.createSession.bind(chatService)) // 创建会话
+        routerProxy.get('/chat/get/sessions', getSessionsInput, getSessionsOutput, chatService.getSessions.bind(chatService)) // 查询会话
+        routerProxy.post('/chat/send/message', sendMessageInput, null, chatService.sendMessage.bind(chatService)) // 发送消息
+        routerProxy.get('/chat/get/messages', getMessagesInput, getMessagesOutput, chatService.getMessages.bind(chatService)) // 查询消息
 
         /** 直播模块 TODO: 待开发 */
 
